[package]
name = "ci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-cache"
path = "src/create-cache/main.rs"

[[bin]]
name = "restore-cache"
path = "src/restore-cache/main.rs"

[lib]

[dependencies]
possibly = "1"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
tar = "0.4"
flate2 = "1.0"
fs4 = "0.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1